fix horizontal scrolling on mobile devices

--- a/css/v6decode.scss
+++ b/css/v6decode.scss
@@ -209,10 +209,6 @@ div > dl {
   margin-left: 1em;
 }
 
-dl {
-  width: 100%;
-}
-
 dt {
   font-weight: bold;
 }
